--- a/app/src/main/res/layout/event_list_design.xml
+++ b/app/src/main/res/layout/event_list_design.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="250dp"
@@ -15,11 +16,13 @@
         app:layout_constraintTop_toTopOf="parent"
         >
 
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/eventImage"
             android:src="@drawable/tedx"
+            android:outlineSpotShadowColor="@color/colorPrimary"
             >
 
         </ImageView>
