--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,6 +18,7 @@
                 android:layout_marginTop="30dp"
                 android:text="Registration Page"
                 android:textSize="32dp"
+                android:textColor="#000000"
                 android:textAlignment="center"
                 android:fontFamily="@font/almendra_display"
                 android:textStyle="bold"/>
@@ -124,6 +125,8 @@
                     android:buttonTint="#ef5959"
                     android:text="Cash Payment"/>
 
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btnRegister"
                 android:layout_width="200dp"
@@ -144,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:text="Your Data Has Been Saved"/>
 
-            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
