--- a/app/src/main/res/layout/pop_up_layout.xml
+++ b/app/src/main/res/layout/pop_up_layout.xml
@@ -3,32 +3,55 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:layout_height="410dp"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:background="@drawable/grid_icon_team_design">
 
-    <TextView
-        android:id="@+id/close_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:textAlignment="viewEnd"
-        android:text="X"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:textColor="#ffffff"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="5"/>
+        <TextView
+            android:id="@+id/close_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="X"
+            android:layout_weight="1"
+            android:layout_gravity="end"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:background="@drawable/close_bg"/>
 
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         android:id="@+id/imageProfilePopUp"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
 
+    <TextView
+        android:layout_width="200dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:background="@drawable/close_bg"/>
+
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
